# Fastest_Image_Pattern_Matching

./: .gitignore  CMakeLists.txt  ELCVMatchTool.sln  LICENSE  README.md  vcpkg.json
ELCVMatchTool/: CvvImage.cpp  CvvImage.h  ELCVMatchTool.aps  ELCVMatchTool.cpp  ELCVMatchTool.h  ELCVMatchTool.rc  ELCVMatchTool.vcxproj  ELCVMatchTool.vcxproj.filters  ELCVMatchToolDlg.cpp  ELCVMatchToolDlg.h  MatchTool.Lang  framework.h  pch.h  resource.h
ELCVMatchTool/Debug/: ELCVMatchTool.res  vc141.idb
ELCVMatchTool/Debug/ELCVMatchTool.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ELCVMatchTool.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
ELCVMatchTool/Debug_4.X/: vc141.idb
ELCVMatchTool/Release_4.X/: vc141.idb
ELCVMatchTool/res/: ELCVMatchTool.rc2
MatchTool/: ELCVMatchTool.rc  ELCVMatchTool.sln  ELCVMatchTool.vcxproj  ELCVMatchTool.vcxproj.filters  MatchTool.Lang  MatchTool.cpp  MatchTool.rc  MatchTool.sln  MatchTool.vcxproj  MatchTool.vcxproj.filters  MatchToolDlg.cpp  MatchToolDlg.h  arm_version.cpp  resource.h  targetver.h  x86_ubuntu_linux.cpp
MatchTool/res/: MatchTool.rc2
